--- a/main_app/templates/home.html
+++ b/main_app/templates/home.html
@@ -1,4 +1,11 @@
-{% extends 'base.html' %}
-{% block content %}
-  Home
-  {% endblock %}
+{% extends 'base.html' %} {% block content %}
+
+{% load socialaccount %}
+
+<h1>Google Login</h1>
+{% if user.is_authenticated %}
+<p>Welcome, {{ user.username }}</p>
+{% else %}
+<h1>Please log in</h1>
+
+{% endif %} {% endblock %}
