--- a/main_app/templates/home.html
+++ b/main_app/templates/home.html
@@ -2,10 +2,41 @@
 
 {% load socialaccount %}
 
-<h1>Google Login</h1>
 {% if user.is_authenticated %}
 <p>Welcome, {{ user.username }}</p>
 {% else %}
-<h1>Please log in</h1>
+<div class="container">
+  <div class="row">
+      <div class="col s12 m6 offset-m3">
+          <div class="card grey lighten-3">
+              <div class="card-content black-text">
+                  <span class="card-title">Please sign in</span>
+                  <form class="form-signin">
+                      <div class="input-field">
+                          <input id="inputEmail" type="email" class="validate" required autofocus>
+                          <label for="inputEmail">Email address</label>
+                      </div>
+                      <div class="input-field">
+                          <input id="inputPassword" type="password" class="validate" required>
+                          <label for="inputPassword">Password</label>
+                      </div>
+                      <p>
+                          <label>
+                              <input type="checkbox" />
+                              <span>Remember me</span>
+                          </label>
+                      </p>
+                      <button class="btn waves-effect waves-light" type="submit">Sign in</button>
+                      <a href="{% provider_login_url 'google' %}" class="btn red" role="button">Sign in with Google</a>
+                  </form>
+              </div>
+              <div class="card-action">
+                  <p class="grey-text text-darken-1">&copy; 2024</p>
+              </div>
+          </div>
+      </div>
+  </div>
+</div>
+
 
 {% endif %} {% endblock %}
